# open-voicetyping

./: .env.example  .gitignore  AUDIO_RECORDING_README.md  CLAUDE.md  DBUS_SERVICE_README.md  LICENSE  Makefile  README.md  pyproject.toml  test_audio_recording.py
.cursor/rules/: 000-genaral.mdc
etc/: voicetyping-core.service  voicetyping-dbus-policy.conf  voicetyping-keyboard.service  voicetyping.service
extension/: Makefile  README.md  const.js  dbus.js  extension.js  metadata.json  prefs.js  run-nested.sh  stylesheet.css
extension/schemas/: org.gnome.shell.extensions.voicetyping.gschema.xml
tests/: __init__.py  test_cli.py  test_dbus_client.py  test_state.py  test_voice_typing_interface.py
voicetyping/: audio.py  config.py  const.py  dbus_service.py  errors.py  gnome_settings.py  http_client.py  main.py  openai_client.py  state.py  transcription_client.py  virtual_keyboard.py
voicetyping/.cursor/rules/: 100-execution.mdc
voicetyping/audio/: recorder.py  sampler.py
voicetyping/cli/: __init__.py  record.py  transcribe.py
voicetyping/keyboard/: dbus_client.py  dbus_interface.py  server.py  virtual_keyboard.py
