[tool.poetry]
name = "voicetyping"
version = "0.4.0"
description = ""
authors = ["Lukasz Jachym <lukasz.jachym@gmail.com>"]
readme = "README.md"
packages = [{include = "voicetyping"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.8.1"
dbus-next = "^0.2.3"
pyaudio = "^0.2.14"
numpy = "^1.26.0"
httpx = "^0.28.1"
python-uinput = "^1.0.1"
pygobject = "^3.52.3"
lameenc = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7"
pre-commit = "^3.1.0"
mypy = "^1.0.1"
ruff = "^0.11.0"

[tool.poetry.scripts]
voicetyping-server = 'voicetyping:main.server'
voicetyping-keyboard = 'voicetyping:keyboard.server'
voicetyping-transcribe = 'voicetyping:cli.transcribe'
voicetyping-record = 'voicetyping.cli.record:record'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
src_paths = ["voicetyping", "tests"]
